<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="question_1">Question 1</string>
    <string name="question_2">Question 2</string>
    <string name="question_3">Question 3</string>
    <string name="question_4">Question 4</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_a_member">Not a member?</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="register">Register</string>
    <string name="already_a_member">Already a member?</string>
    <string name="sign_in">Sign in</string>
    <string name="invalid_email">Invalid email</string>
    <string name="password_invalid">Invalid password! password should contain at least   one capital letter  one small letter  one number and  the length should be greater than 8</string>
    <string name="name">Name</string>
    <string name="invalid_name">Invalid name!</string>
    <string name="validate">Validate</string>
    <string name="enter_phone_number">Enter phone number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="see_response_below">See Response Below</string>
    <string name="enter_item">Enter Item :</string>
    <string name="add_to_spinner">Add To Spinner</string>
    <string name="remove_from_spinner">Remove From Spinner</string>
    <string name="question_5">Question 5</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="question_6">Question 6</string>
    <string name="congratulations">Congratulations!</string>
    <string name="correct_answers">Correct Answers</string>
    <string name="total_questions">Total Questions</string>
    <string name="final_result">Final Result</string>
    <string name="question_7">Question 7</string>
    <string name="enter_player_name">Enter Player name</string>
    <string name="question_10">Question 10</string>
    <string name="previous">Previous</string>
    <string name="question_8">Question 8</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit">Deposit</string>
    <string name="question_9">Question 9</string>
    <string name="question_11">Question 11</string>
    <string name="add_student">Add Student</string>
    <string name="enter_student_name">Enter student name</string>
    <string name="select_age">Select Age :</string>
    <string name="search">Search...</string>
    <string name="enter_first_number">Enter first number</string>
    <string name="enter_second_number">Enter second number</string>
    <string name="question_12">Question 12</string>
    <string name="question_13">Question 13</string>
    <string name="check_palindrome">Check Palindrome</string>
    <string name="question_14">Question 14</string>
    <string name="question_15">Question 15</string>
    <string name="calculate">Calculate</string>
    <string name="question_16">Question 16</string>
    <string name="transform">Transform</string>
    <string name="question_17">Question 17</string>
    <string name="question_19">Question 19</string>
    <string name="click_me">Click Me!!</string>
    <string name="yes">Yes</string>
    <string name="question_20">Question 20</string>
    <string name="no">No</string>
    <string name="question_21">Question 21</string>
    <string name="question_22">Question 22</string>
    <string name="question_23">Question 23</string>
    <string name="question_24">Question 24</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="underline">Underline</string>
    <string name="display">Display</string>
    <string name="clear">Clear</string>
    <string name="question_25">Question 25</string>
    <string name="title_activity_question26">Map</string>
    <string name="question_26">Question 26</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="satellite_view">Satellite View</string>
    <string name="terrain_view">Terrain View</string>
    <string name="normal_view">Normal View</string>
    <string name="question_27">Question 27</string>

</resources>
