<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/question_1"
            android:icon="@drawable/question_icon"
            android:title="@string/question_1" />
        <item
            android:id="@+id/question_2"
            android:icon="@drawable/question_icon"
            android:title="@string/question_2" />
        <item
            android:id="@+id/question_3"
            android:icon="@drawable/question_icon"
            android:title="@string/question_3" />
        <item
            android:id="@+id/question_4"
            android:icon="@drawable/question_icon"
            android:title="@string/question_4" />
        <item
            android:id="@+id/question_5"
            android:icon="@drawable/question_icon"
            android:title="@string/question_5" />
        <item
            android:id="@+id/question_6"
            android:icon="@drawable/question_icon"
            android:title="@string/question_6" />
        <item
            android:id="@+id/question_7"
            android:icon="@drawable/question_icon"
            android:title="@string/question_7" />
        <item
            android:id="@+id/question_8"
            android:icon="@drawable/question_icon"
            android:title="@string/question_8" />
        <item
            android:id="@+id/question_9"
            android:icon="@drawable/question_icon"
            android:title="@string/question_9" />
        <item
            android:id="@+id/question_10"
            android:icon="@drawable/question_icon"
            android:title="@string/question_10" />
        <item
            android:id="@+id/question_11"
            android:icon="@drawable/question_icon"
            android:title="@string/question_11" />
        <item
            android:id="@+id/question_12"
            android:icon="@drawable/question_icon"
            android:title="@string/question_12" />
        <item
            android:id="@+id/question_13"
            android:icon="@drawable/question_icon"
            android:title="@string/question_13" />
        <item
            android:id="@+id/question_14"
            android:icon="@drawable/question_icon"
            android:title="@string/question_14" />
    </group>

</menu>
