<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#50B957"
    android:orientation="vertical"
    tools:context=".fragments.FinalResultFragment">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/congratulations" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/correct_answers"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/correct_answers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/total_questions"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/total_questions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>